--- a/app/src/main/res/xml/deluxerom_reboot.xml
+++ b/app/src/main/res/xml/deluxerom_reboot.xml
@@ -13,26 +13,40 @@
         grx:commonBcExtra="arg"
         grx:commonBcExtraValue="power_menu" />
 
-    <!-- Menu extendido (AlertDialog) -->
-    <!--GrxSwitchPreference
-        android:title="@string/extended_power_menu"
-        android:key="dlx_use_custom_power_menu"
-        android:defaultValue="0"
-        grx:commonBcExtra="arg"
-        grx:commonBcExtraValue="power_menu"
-        grx:systemType="system" /-->
-
     <!--Elementos a mostar / orden -->
-    <!--GrxSelectSortItems
+    <GrxSelectSortItems
         android:title="@string/elements_show"
-        android:key="dlx_powermenu_container"
-        android:defaultValue="power,restart,data_mode,emergency,drc,"
+        grx:depRule="ENABLE#dlx_power_menu_style#STRING#0"
+        android:key="dlx_power_menu_container"
+        android:defaultValue="power,restart,emergency,"
         grx:systemType="system"
         grx:separator=","
         grx:commonBcExtra="arg"
-        grx:commonBcExtraValue="reboot"
+        grx:commonBcExtraValue="power_menu"
         grx:optionsArray="@array/agc_reboot_options"
-        grx:valuesArray="@array/agc_reboot_values" /-->
+        grx:valuesArray="@array/agc_reboot_values" />
+
+    <GrxCheckBoxPreference
+        android:title="@string/use_random_reboot"
+        grx:depRule="ENABLE#dlx_power_menu_style#STRING#0"
+        android:key="dlx_power_menu_random"
+        grx:systemType="system"
+        grx:commonBcExtra="arg"
+        grx:commonBcExtraValue="power_menu"
+        android:defaultValue="0" />
+
+    <!-- Estilo de iconos -->
+    <GrxSingleSelection
+        android:title="@string/icons_style"
+        grx:depRule="ENABLE#dlx_power_menu_style#STRING#0"
+        android:key="dlx_reboot_style"
+        android:defaultValue="0"
+        grx:optionsArray="@array/reboot_icon_entries"
+        grx:iconsArray="@array/drawables_icono_reinicio"
+        grx:valuesArray="@array/reboot_icon_values"
+        grx:systemType="system"
+        grx:commonBcExtra="arg"
+        grx:commonBcExtraValue="power_menu" />
 
     <!--
     <GrxCheckBoxPreference
@@ -41,18 +55,6 @@
         grx:commonBcExtra="arg"
         grx:commonBcExtraValue="reboot"
         android:defaultValue="1" />
-
-    &lt;!&ndash; Estilo de iconos &ndash;&gt;
-    <GrxSingleSelection
-        android:title="@string/icons_style"
-        android:key="dlx_reboot_style"
-        android:defaultValue="0"
-        grx:optionsArray="@array/reboot_icon_entries"
-        grx:iconsArray="@array/drawables_icono_reinicio"
-        grx:valuesArray="@array/reboot_icon_values"
-        grx:systemType="system"
-        grx:commonBcExtra="arg"
-        grx:commonBcExtraValue="reboot" />
 
     &lt;!&ndash; Color de texto &ndash;&gt;
     <GrxColorPicker
