--- a/app/src/main/res/values-es/values-es-grxsettings.xml
+++ b/app/src/main/res/values-es/values-es-grxsettings.xml
@@ -215,4 +215,7 @@
     </string-array>
 
     <string name="grxs_draganddroptoshortout">Puedes ordenar la lista arrastrando los elementos</string>
+
+    <string name="activity_not_found">No se puede abrir esta actividad</string>
+
 </resources>
