--- a/app/src/main/res/layout/rom_info_tab.xml
+++ b/app/src/main/res/layout/rom_info_tab.xml
@@ -22,8 +22,8 @@
                     android:layout_height="match_parent"
                     android:src="@drawable/_imagen04" />
 
-                <!--com.grx.settings.views.LinearLayoutWithLink
-                    grxURL="https://forum.xda-developers.com/galaxy-note-8/development/n950f-g955f-g950f-deluxerom-v6-0-t3784712"
+                <com.grx.settings.views.LinearLayoutWithLink
+                    grxURL="https://forum.xda-developers.com/s7-edge/development/g93xf-deluxeromse-v1-t3921890"
                     android:paddingTop="12dp"
                     android:paddingBottom="12dp"
                     android:layout_width="match_parent"
@@ -46,7 +46,7 @@
                 </com.grx.settings.views.LinearLayoutWithLink>
 
                 <com.grx.settings.views.LinearLayoutWithLink
-                    grxURL="https://www.htcmania.com/showthread.php?t=1404819"
+                    grxURL="https://www.htcmania.com/showthread.php?t=1487196"
                     android:paddingTop="12dp"
                     android:paddingBottom="12dp"
                     android:layout_width="match_parent"
@@ -67,7 +67,7 @@
                         android:gravity="center_vertical"
                         android:layout_marginStart="15dp"
                         android:text="@string/htc" />
-                </com.grx.settings.views.LinearLayoutWithLink-->
+                </com.grx.settings.views.LinearLayoutWithLink>
 
                 <com.grx.settings.views.LinearLayoutWithLink
                     grxURL="https://t.me/joinchat/CogTU0GwjRFRR1zTf9MuEg"
