Custom hint and title colors in navigation menu

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -361,6 +361,10 @@
 
 			<attr name="badgeText" format="string" /> <!--grx -->
 
+			<attr name="customTitleColor" format="string|integer|color|reference" /> <!--grx -->
+
+			<attr name="customHintColor" format="string|integer|color|reference" /> <!--grx -->
+
 			<attr name="showIconSpace" format="boolean" />
 
 			<attr name="grxBPRule"/>
