--- a/app/src/main/res/values-es/values-es-grxsettings.xml
+++ b/app/src/main/res/values-es/values-es-grxsettings.xml
@@ -220,4 +220,8 @@
 
     <string name="grxs_app_not_rooted">No root permission!</string>
 
+    <string name="grxs_reset_all_prefs">Resetear valores</string>
+    <string name="grxs_tit_reset_all_prefs">Resetear TODAS las opciones</string>
+    <string name="grxs_msg_reset_all_prefs">¿Estás seguro que quieres resetear TODAS las preferencias y opciones a su valor por defecto?</string>
+
 </resources>
