--- a/app/src/main/res/menu/three_dots_menu.xml
+++ b/app/src/main/res/menu/three_dots_menu.xml
@@ -25,4 +25,10 @@
         android:orderInCategory="100"
         android:title="@string/grxs_reset_all_prefs"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/tools"
+        android:orderInCategory="100"
+        android:title="@string/grxs_tools"
+        app:showAsAction="never" />
 </menu>
