--- a/app/src/main/res/values-es/values-es-grxsettings.xml
+++ b/app/src/main/res/values-es/values-es-grxsettings.xml
@@ -566,4 +566,10 @@
     <string name="grxs_tit_reset_all_prefs">Resetear TODAS las opciones</string>
     <string name="grxs_msg_reset_all_prefs">¿Estás seguro que quieres resetear TODAS las preferencias y opciones a su valor por defecto?</string>
 
+    <string name="grxs_recovery">Reiniciar en modo recovery</string>
+    <string name="grxs_restartui">Reiniciar UI</string>
+    <string name="grxs_restartphone">Reiniciar dispositivo</string>
+    <string name="grxs_download_mode">Reiniciar en modo download</string>
+    <string name="grxs_tools">Herramientas</string>
+
 </resources>
